--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1,5 +1,24 @@
 # Configuration file
 
+advancedsystemsmanager {
+    B:systemcable=true
+    B:systemcableae=false
+    B:systemcableblockgate=false
+    B:systemcablebud=false
+    B:systemcablecamo=false
+    B:systemcablecluster=false
+    B:systemcablefluidgate=false
+    B:systemcableinput=false
+    B:systemcableoutput=false
+    B:systemcablerelay=false
+    B:systemcablerf=false
+    B:systemcablesign=false
+    B:systemcablevalve=false
+    B:systemcablevoid=false
+    B:systemmanager=false
+}
+
+
 ae2stuff {
     B:Encoder=false
     B:Grower=false
@@ -81,6 +100,74 @@ appliedenergistics2 {
     B:tileSkyStoneBrickStairBlock=false
     B:tileSkyStoneSmallBrickStairBlock=false
     B:tileSkyStoneStairBlock=false
+}
+
+
+automagy {
+    B:blockAmnesiac=false
+    B:blockBoiler=false
+    B:blockBookshelfEnchanted=true
+    B:blockBookshelfEnchanted.1=true
+    B:blockCreativeJar.3=false
+    B:blockDimensionLure=false
+    B:blockEagerChest=false
+    B:blockEntitySignal=false
+    B:blockEssentiaLocus=false
+    B:blockEssentiaLocusAggregator=false
+    B:blockFinicalMaw=false
+    B:blockFluidMilk=false
+    B:blockFluidMushroom=false
+    B:blockFluidVishroom=false
+    B:blockGolemInhibitor=false
+    B:blockGolemTaskmaster=false
+    B:blockGolemWorkbench=false
+    B:blockGreedyChest=false
+    B:blockHourglass=false
+    B:blockHourglassMagic=false
+    B:blockHungryMaw=false
+    B:blockInventarium=false
+    B:blockMetalGlow=true
+    B:blockMirrorAlt=false
+    B:blockMobLure=false
+    B:blockNetherRune=true
+    B:blockNetherRune.1=true
+    B:blockNetherRune.2=true
+    B:blockNetherRune.4=true
+    B:blockNetherRune.6=true
+    B:blockNetherRuneMob=true
+    B:blockNetherRuneMob.1=true
+    B:blockNetherRuneMob.2=true
+    B:blockNetherRuneMob.3=true
+    B:blockNetherRuneMob.4=true
+    B:blockNetherRuneMob.5=true
+    B:blockNetherRuneMob.6=true
+    B:blockNethermind=false
+    B:blockPhenomenon=false
+    B:blockRedcrystal=false
+    B:blockRedcrystalAmp=false
+    B:blockRedcrystalDense=false
+    B:blockRedcrystalDim=false
+    B:blockRedcrystalMerc=false
+    B:blockRedcrystalRes=false
+    B:blockRemoteComparator=false
+    B:blockReqTome=false
+    B:blockRunedObsidian=true
+    B:blockScribePointer=false
+    B:blockTally=false
+    B:blockTallyLensDrops=false
+    B:blockTallyLensWorld=false
+    B:blockTenaciousChest=false
+    B:blockThaumostaticPylon=false
+    B:blockThaumostaticPylon.1=false
+    B:blockThaumostaticSpire=false
+    B:blockThirstyTank=false
+    B:blockTorchInversion=false
+    B:blockTorchInversionoff=false
+    B:blockTranslucent=false
+    B:blockTranslucent.1=false
+    B:blockUnseenScribe=false
+    B:blockVisReader=false
+    B:blockXPStone=false
 }
 
 
@@ -4161,6 +4248,8 @@ dcsapplemilk {
     B:defeatedcrowcocktailSP=false
     B:defeatedcrowcocktailSP.1=false
     B:defeatedcrowcocktailSP.2=false
+    B:defeatedcrowcontainerBottleW.7=false
+    B:defeatedcrowcontainerSaddle.7=false
     B:defeatedcrowcropMint=false
     B:defeatedcroweggBasket=false
     B:defeatedcroweggBasket.1=false
@@ -5358,6 +5447,7 @@ forestry {
 
 
 funkylocomotion {
+    B:booster=false
     B:frame=false
     B:frame2=false
     B:frame3=false
@@ -5630,6 +5720,10 @@ gardentrees {
     B:strangeplant=false
     B:thinlog=false
     B:thinlog.1=false
+    B:thinlog.1017=false
+    B:thinlog.1018=false
+    B:thinlog.1019=false
+    B:thinlog.1020=false
     B:thinlog.1088=false
     B:thinlog.1094=false
     B:thinlog.1098=false
@@ -5723,6 +5817,10 @@ gardentrees {
     B:thinlog.13284=false
     B:thinlog.13285=false
     B:thinlog.13286=false
+    B:thinlog.13305=false
+    B:thinlog.13306=false
+    B:thinlog.13307=false
+    B:thinlog.13308=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -5875,6 +5973,10 @@ gardentrees {
     B:thinlog.5092=false
     B:thinlog.5093=false
     B:thinlog.5094=false
+    B:thinlog.5113=false
+    B:thinlog.5114=false
+    B:thinlog.5115=false
+    B:thinlog.5116=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -6024,6 +6126,10 @@ gardentrees {
     B:thinlog.9188=false
     B:thinlog.9189=false
     B:thinlog.9190=false
+    B:thinlog.9209=false
+    B:thinlog.9210=false
+    B:thinlog.9211=false
+    B:thinlog.9212=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -6087,6 +6193,10 @@ gardentrees {
     B:thinlog.998=false
     B:thinlogfence=false
     B:thinlogfence.1=false
+    B:thinlogfence.1017=false
+    B:thinlogfence.1018=false
+    B:thinlogfence.1019=false
+    B:thinlogfence.1020=false
     B:thinlogfence.1088=false
     B:thinlogfence.1094=false
     B:thinlogfence.1098=false
@@ -6180,6 +6290,10 @@ gardentrees {
     B:thinlogfence.13284=false
     B:thinlogfence.13285=false
     B:thinlogfence.13286=false
+    B:thinlogfence.13305=false
+    B:thinlogfence.13306=false
+    B:thinlogfence.13307=false
+    B:thinlogfence.13308=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6332,6 +6446,10 @@ gardentrees {
     B:thinlogfence.5092=false
     B:thinlogfence.5093=false
     B:thinlogfence.5094=false
+    B:thinlogfence.5113=false
+    B:thinlogfence.5114=false
+    B:thinlogfence.5115=false
+    B:thinlogfence.5116=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6481,6 +6599,10 @@ gardentrees {
     B:thinlogfence.9188=false
     B:thinlogfence.9189=false
     B:thinlogfence.9190=false
+    B:thinlogfence.9209=false
+    B:thinlogfence.9210=false
+    B:thinlogfence.9211=false
+    B:thinlogfence.9212=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
@@ -6999,6 +7121,14 @@ immersiveengineering {
     B:storage.7=false
     B:storage.8=false
     B:storage.9=false
+    B:storageSlab=false
+    B:storageSlab.1=false
+    B:storageSlab.2=false
+    B:storageSlab.3=false
+    B:storageSlab.4=false
+    B:storageSlab.5=false
+    B:storageSlab.6=false
+    B:storageSlab.7=false
     B:woodenDecoration=false
     B:woodenDecoration.1=false
     B:woodenDecoration.2=false
@@ -7021,6 +7151,13 @@ immersiveintegration {
     B:meWireConnector=false
     B:redstoneWireConnector=false
     B:steelTrapdoor=false
+}
+
+
+integratedcircuits {
+    B:integratedcircuitsassembler=false
+    B:integratedcircuitspcblayout=false
+    B:integratedcircuitssocket=false
 }
 
 
@@ -9580,6 +9717,107 @@ reccomplex {
     B:negativeSpace.9=false
     B:structureGenerator=false
     B:weightedcommandblock=false
+}
+
+
+redlogic {
+    B:redlogicarrayCells=false
+    B:redlogicarrayCells.1=false
+    B:redlogicarrayCells.2=false
+    B:redlogicbutton=false
+    B:redlogiccustomCircuitBlock=false
+    B:redlogicgates=false
+    B:redlogiclampCubeDecorative=true
+    B:redlogiclampCubeDecorative.1=true
+    B:redlogiclampCubeDecorative.10=true
+    B:redlogiclampCubeDecorative.11=true
+    B:redlogiclampCubeDecorative.12=true
+    B:redlogiclampCubeDecorative.13=true
+    B:redlogiclampCubeDecorative.14=true
+    B:redlogiclampCubeDecorative.15=true
+    B:redlogiclampCubeDecorative.2=true
+    B:redlogiclampCubeDecorative.3=true
+    B:redlogiclampCubeDecorative.4=true
+    B:redlogiclampCubeDecorative.5=true
+    B:redlogiclampCubeDecorative.6=true
+    B:redlogiclampCubeDecorative.7=true
+    B:redlogiclampCubeDecorative.8=true
+    B:redlogiclampCubeDecorative.9=true
+    B:redlogiclampCubeIndicatorOff=true
+    B:redlogiclampCubeIndicatorOff.1=true
+    B:redlogiclampCubeIndicatorOff.10=true
+    B:redlogiclampCubeIndicatorOff.11=true
+    B:redlogiclampCubeIndicatorOff.12=true
+    B:redlogiclampCubeIndicatorOff.13=true
+    B:redlogiclampCubeIndicatorOff.14=true
+    B:redlogiclampCubeIndicatorOff.15=true
+    B:redlogiclampCubeIndicatorOff.2=true
+    B:redlogiclampCubeIndicatorOff.3=true
+    B:redlogiclampCubeIndicatorOff.4=true
+    B:redlogiclampCubeIndicatorOff.5=true
+    B:redlogiclampCubeIndicatorOff.6=true
+    B:redlogiclampCubeIndicatorOff.7=true
+    B:redlogiclampCubeIndicatorOff.8=true
+    B:redlogiclampCubeIndicatorOff.9=true
+    B:redlogiclampCubeOff=true
+    B:redlogiclampCubeOff.1=true
+    B:redlogiclampCubeOff.10=true
+    B:redlogiclampCubeOff.11=true
+    B:redlogiclampCubeOff.12=true
+    B:redlogiclampCubeOff.13=true
+    B:redlogiclampCubeOff.14=true
+    B:redlogiclampCubeOff.15=true
+    B:redlogiclampCubeOff.2=true
+    B:redlogiclampCubeOff.3=true
+    B:redlogiclampCubeOff.4=true
+    B:redlogiclampCubeOff.5=true
+    B:redlogiclampCubeOff.6=true
+    B:redlogiclampCubeOff.7=true
+    B:redlogiclampCubeOff.8=true
+    B:redlogiclampCubeOff.9=true
+    B:redlogiclampNonCube=false
+    B:redlogicmachineBlock=false
+    B:redlogicmachineBlock.1=false
+    B:redlogicmachineBlock.2=false
+    B:redlogicmachineBlock.3=false
+    B:redlogicplainBlock=true
+    B:redlogicplainBlock.1=true
+    B:redlogicwire=false
+    B:redlogicwire.1=false
+    B:redlogicwire.10=false
+    B:redlogicwire.11=false
+    B:redlogicwire.12=false
+    B:redlogicwire.13=false
+    B:redlogicwire.14=false
+    B:redlogicwire.15=false
+    B:redlogicwire.16=false
+    B:redlogicwire.16384=false
+    B:redlogicwire.16385=false
+    B:redlogicwire.16386=false
+    B:redlogicwire.16387=false
+    B:redlogicwire.16388=false
+    B:redlogicwire.16389=false
+    B:redlogicwire.16390=false
+    B:redlogicwire.16391=false
+    B:redlogicwire.16392=false
+    B:redlogicwire.16393=false
+    B:redlogicwire.16394=false
+    B:redlogicwire.16395=false
+    B:redlogicwire.16396=false
+    B:redlogicwire.16397=false
+    B:redlogicwire.16398=false
+    B:redlogicwire.16399=false
+    B:redlogicwire.16400=false
+    B:redlogicwire.16401=false
+    B:redlogicwire.17=false
+    B:redlogicwire.2=false
+    B:redlogicwire.3=false
+    B:redlogicwire.4=false
+    B:redlogicwire.5=false
+    B:redlogicwire.6=false
+    B:redlogicwire.7=false
+    B:redlogicwire.8=false
+    B:redlogicwire.9=false
 }
 
 
