--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -140,6 +140,12 @@ shedding {
     I:Angler.metadata=0
     I:Angler.rate=-1
 
+    # Configuration of Shedding for Automagy.WispNether
+    S:Automagy.WispNether.item=
+    I:Automagy.WispNether.lexiconDisplaySize=40
+    I:Automagy.WispNether.metadata=0
+    I:Automagy.WispNether.rate=-1
+
     # Configuration of Shedding for Bat
     S:Bat.item=
     I:Bat.lexiconDisplaySize=40
@@ -1667,6 +1673,12 @@ shedding {
     I:enderzoo.ConcussionCreeper.lexiconDisplaySize=40
     I:enderzoo.ConcussionCreeper.metadata=0
     I:enderzoo.ConcussionCreeper.rate=-1
+
+    # Configuration of Shedding for enderzoo.DireSlime
+    S:enderzoo.DireSlime.item=
+    I:enderzoo.DireSlime.lexiconDisplaySize=40
+    I:enderzoo.DireSlime.metadata=0
+    I:enderzoo.DireSlime.rate=-1
 
     # Configuration of Shedding for enderzoo.DireWolf
     S:enderzoo.DireWolf.item=
