--- a/config/IGWMod.cfg
+++ b/config/IGWMod.cfg
@@ -1,7 +1,9 @@
 # Configuration file
 
 general {
-    # When enabled, this will notify players when IGW-Mod is not installed even though mods add support.
+    B:"Automatically scale to GUI scale AUTO in IGW GUI"=true
+    B:"Debug mode"=true
+    B:"Should show tooltip"=false
     B:enable_missing_notification=true
 }
 
