--- a/config/IguanaTinkerTweaks/BlockDefaults.cfg
+++ b/config/IguanaTinkerTweaks/BlockDefaults.cfg
@@ -994,6 +994,358 @@ blocks_crowbar {
 
 
 blocks_pickaxe {
+    I:"Automagy:blockAmnesiac:0"=0
+    I:"Automagy:blockAmnesiac:1"=0
+    I:"Automagy:blockAmnesiac:10"=0
+    I:"Automagy:blockAmnesiac:11"=0
+    I:"Automagy:blockAmnesiac:12"=0
+    I:"Automagy:blockAmnesiac:13"=0
+    I:"Automagy:blockAmnesiac:14"=0
+    I:"Automagy:blockAmnesiac:15"=0
+    I:"Automagy:blockAmnesiac:2"=0
+    I:"Automagy:blockAmnesiac:3"=0
+    I:"Automagy:blockAmnesiac:4"=0
+    I:"Automagy:blockAmnesiac:5"=0
+    I:"Automagy:blockAmnesiac:6"=0
+    I:"Automagy:blockAmnesiac:7"=0
+    I:"Automagy:blockAmnesiac:8"=0
+    I:"Automagy:blockAmnesiac:9"=0
+    I:"Automagy:blockDimensionLure:0"=0
+    I:"Automagy:blockDimensionLure:1"=0
+    I:"Automagy:blockDimensionLure:10"=0
+    I:"Automagy:blockDimensionLure:11"=0
+    I:"Automagy:blockDimensionLure:12"=0
+    I:"Automagy:blockDimensionLure:13"=0
+    I:"Automagy:blockDimensionLure:14"=0
+    I:"Automagy:blockDimensionLure:15"=0
+    I:"Automagy:blockDimensionLure:2"=0
+    I:"Automagy:blockDimensionLure:3"=0
+    I:"Automagy:blockDimensionLure:4"=0
+    I:"Automagy:blockDimensionLure:5"=0
+    I:"Automagy:blockDimensionLure:6"=0
+    I:"Automagy:blockDimensionLure:7"=0
+    I:"Automagy:blockDimensionLure:8"=0
+    I:"Automagy:blockDimensionLure:9"=0
+    I:"Automagy:blockEntitySignal:0"=0
+    I:"Automagy:blockEntitySignal:1"=0
+    I:"Automagy:blockEntitySignal:10"=0
+    I:"Automagy:blockEntitySignal:11"=0
+    I:"Automagy:blockEntitySignal:12"=0
+    I:"Automagy:blockEntitySignal:13"=0
+    I:"Automagy:blockEntitySignal:14"=0
+    I:"Automagy:blockEntitySignal:15"=0
+    I:"Automagy:blockEntitySignal:2"=0
+    I:"Automagy:blockEntitySignal:3"=0
+    I:"Automagy:blockEntitySignal:4"=0
+    I:"Automagy:blockEntitySignal:5"=0
+    I:"Automagy:blockEntitySignal:6"=0
+    I:"Automagy:blockEntitySignal:7"=0
+    I:"Automagy:blockEntitySignal:8"=0
+    I:"Automagy:blockEntitySignal:9"=0
+    I:"Automagy:blockEssentiaLocus:0"=0
+    I:"Automagy:blockEssentiaLocus:1"=0
+    I:"Automagy:blockEssentiaLocus:10"=0
+    I:"Automagy:blockEssentiaLocus:11"=0
+    I:"Automagy:blockEssentiaLocus:12"=0
+    I:"Automagy:blockEssentiaLocus:13"=0
+    I:"Automagy:blockEssentiaLocus:14"=0
+    I:"Automagy:blockEssentiaLocus:15"=0
+    I:"Automagy:blockEssentiaLocus:2"=0
+    I:"Automagy:blockEssentiaLocus:3"=0
+    I:"Automagy:blockEssentiaLocus:4"=0
+    I:"Automagy:blockEssentiaLocus:5"=0
+    I:"Automagy:blockEssentiaLocus:6"=0
+    I:"Automagy:blockEssentiaLocus:7"=0
+    I:"Automagy:blockEssentiaLocus:8"=0
+    I:"Automagy:blockEssentiaLocus:9"=0
+    I:"Automagy:blockEssentiaLocusAggregator:0"=0
+    I:"Automagy:blockEssentiaLocusAggregator:1"=0
+    I:"Automagy:blockEssentiaLocusAggregator:10"=0
+    I:"Automagy:blockEssentiaLocusAggregator:11"=0
+    I:"Automagy:blockEssentiaLocusAggregator:12"=0
+    I:"Automagy:blockEssentiaLocusAggregator:13"=0
+    I:"Automagy:blockEssentiaLocusAggregator:14"=0
+    I:"Automagy:blockEssentiaLocusAggregator:15"=0
+    I:"Automagy:blockEssentiaLocusAggregator:2"=0
+    I:"Automagy:blockEssentiaLocusAggregator:3"=0
+    I:"Automagy:blockEssentiaLocusAggregator:4"=0
+    I:"Automagy:blockEssentiaLocusAggregator:5"=0
+    I:"Automagy:blockEssentiaLocusAggregator:6"=0
+    I:"Automagy:blockEssentiaLocusAggregator:7"=0
+    I:"Automagy:blockEssentiaLocusAggregator:8"=0
+    I:"Automagy:blockEssentiaLocusAggregator:9"=0
+    I:"Automagy:blockFinicalMaw:0"=0
+    I:"Automagy:blockFinicalMaw:1"=0
+    I:"Automagy:blockFinicalMaw:10"=0
+    I:"Automagy:blockFinicalMaw:11"=0
+    I:"Automagy:blockFinicalMaw:12"=0
+    I:"Automagy:blockFinicalMaw:13"=0
+    I:"Automagy:blockFinicalMaw:14"=0
+    I:"Automagy:blockFinicalMaw:15"=0
+    I:"Automagy:blockFinicalMaw:2"=0
+    I:"Automagy:blockFinicalMaw:3"=0
+    I:"Automagy:blockFinicalMaw:4"=0
+    I:"Automagy:blockFinicalMaw:5"=0
+    I:"Automagy:blockFinicalMaw:6"=0
+    I:"Automagy:blockFinicalMaw:7"=0
+    I:"Automagy:blockFinicalMaw:8"=0
+    I:"Automagy:blockFinicalMaw:9"=0
+    I:"Automagy:blockHourglassMagic:0"=0
+    I:"Automagy:blockHourglassMagic:1"=0
+    I:"Automagy:blockHourglassMagic:10"=0
+    I:"Automagy:blockHourglassMagic:11"=0
+    I:"Automagy:blockHourglassMagic:12"=0
+    I:"Automagy:blockHourglassMagic:13"=0
+    I:"Automagy:blockHourglassMagic:14"=0
+    I:"Automagy:blockHourglassMagic:15"=0
+    I:"Automagy:blockHourglassMagic:2"=0
+    I:"Automagy:blockHourglassMagic:3"=0
+    I:"Automagy:blockHourglassMagic:4"=0
+    I:"Automagy:blockHourglassMagic:5"=0
+    I:"Automagy:blockHourglassMagic:6"=0
+    I:"Automagy:blockHourglassMagic:7"=0
+    I:"Automagy:blockHourglassMagic:8"=0
+    I:"Automagy:blockHourglassMagic:9"=0
+    I:"Automagy:blockHungryMaw:0"=0
+    I:"Automagy:blockHungryMaw:1"=0
+    I:"Automagy:blockHungryMaw:10"=0
+    I:"Automagy:blockHungryMaw:11"=0
+    I:"Automagy:blockHungryMaw:12"=0
+    I:"Automagy:blockHungryMaw:13"=0
+    I:"Automagy:blockHungryMaw:14"=0
+    I:"Automagy:blockHungryMaw:15"=0
+    I:"Automagy:blockHungryMaw:2"=0
+    I:"Automagy:blockHungryMaw:3"=0
+    I:"Automagy:blockHungryMaw:4"=0
+    I:"Automagy:blockHungryMaw:5"=0
+    I:"Automagy:blockHungryMaw:6"=0
+    I:"Automagy:blockHungryMaw:7"=0
+    I:"Automagy:blockHungryMaw:8"=0
+    I:"Automagy:blockHungryMaw:9"=0
+    I:"Automagy:blockInventarium:0"=0
+    I:"Automagy:blockInventarium:1"=0
+    I:"Automagy:blockInventarium:10"=0
+    I:"Automagy:blockInventarium:11"=0
+    I:"Automagy:blockInventarium:12"=0
+    I:"Automagy:blockInventarium:13"=0
+    I:"Automagy:blockInventarium:14"=0
+    I:"Automagy:blockInventarium:15"=0
+    I:"Automagy:blockInventarium:2"=0
+    I:"Automagy:blockInventarium:3"=0
+    I:"Automagy:blockInventarium:4"=0
+    I:"Automagy:blockInventarium:5"=0
+    I:"Automagy:blockInventarium:6"=0
+    I:"Automagy:blockInventarium:7"=0
+    I:"Automagy:blockInventarium:8"=0
+    I:"Automagy:blockInventarium:9"=0
+    I:"Automagy:blockMetalGlow:0"=0
+    I:"Automagy:blockMetalGlow:1"=0
+    I:"Automagy:blockMetalGlow:10"=0
+    I:"Automagy:blockMetalGlow:11"=0
+    I:"Automagy:blockMetalGlow:12"=0
+    I:"Automagy:blockMetalGlow:13"=0
+    I:"Automagy:blockMetalGlow:14"=0
+    I:"Automagy:blockMetalGlow:15"=0
+    I:"Automagy:blockMetalGlow:2"=0
+    I:"Automagy:blockMetalGlow:3"=0
+    I:"Automagy:blockMetalGlow:4"=0
+    I:"Automagy:blockMetalGlow:5"=0
+    I:"Automagy:blockMetalGlow:6"=0
+    I:"Automagy:blockMetalGlow:7"=0
+    I:"Automagy:blockMetalGlow:8"=0
+    I:"Automagy:blockMetalGlow:9"=0
+    I:"Automagy:blockMobLure:0"=2
+    I:"Automagy:blockMobLure:1"=2
+    I:"Automagy:blockMobLure:10"=2
+    I:"Automagy:blockMobLure:11"=2
+    I:"Automagy:blockMobLure:12"=2
+    I:"Automagy:blockMobLure:13"=2
+    I:"Automagy:blockMobLure:14"=2
+    I:"Automagy:blockMobLure:15"=2
+    I:"Automagy:blockMobLure:2"=2
+    I:"Automagy:blockMobLure:3"=2
+    I:"Automagy:blockMobLure:4"=2
+    I:"Automagy:blockMobLure:5"=2
+    I:"Automagy:blockMobLure:6"=2
+    I:"Automagy:blockMobLure:7"=2
+    I:"Automagy:blockMobLure:8"=2
+    I:"Automagy:blockMobLure:9"=2
+    I:"Automagy:blockNetherRune:0"=0
+    I:"Automagy:blockNetherRune:1"=0
+    I:"Automagy:blockNetherRune:10"=0
+    I:"Automagy:blockNetherRune:11"=0
+    I:"Automagy:blockNetherRune:12"=0
+    I:"Automagy:blockNetherRune:13"=0
+    I:"Automagy:blockNetherRune:14"=0
+    I:"Automagy:blockNetherRune:15"=0
+    I:"Automagy:blockNetherRune:2"=0
+    I:"Automagy:blockNetherRune:3"=0
+    I:"Automagy:blockNetherRune:4"=0
+    I:"Automagy:blockNetherRune:5"=0
+    I:"Automagy:blockNetherRune:6"=0
+    I:"Automagy:blockNetherRune:7"=0
+    I:"Automagy:blockNetherRune:8"=0
+    I:"Automagy:blockNetherRune:9"=0
+    I:"Automagy:blockNetherRuneMob:0"=0
+    I:"Automagy:blockNetherRuneMob:1"=0
+    I:"Automagy:blockNetherRuneMob:10"=0
+    I:"Automagy:blockNetherRuneMob:11"=0
+    I:"Automagy:blockNetherRuneMob:12"=0
+    I:"Automagy:blockNetherRuneMob:13"=0
+    I:"Automagy:blockNetherRuneMob:14"=0
+    I:"Automagy:blockNetherRuneMob:15"=0
+    I:"Automagy:blockNetherRuneMob:2"=0
+    I:"Automagy:blockNetherRuneMob:3"=0
+    I:"Automagy:blockNetherRuneMob:4"=0
+    I:"Automagy:blockNetherRuneMob:5"=0
+    I:"Automagy:blockNetherRuneMob:6"=0
+    I:"Automagy:blockNetherRuneMob:7"=0
+    I:"Automagy:blockNetherRuneMob:8"=0
+    I:"Automagy:blockNetherRuneMob:9"=0
+    I:"Automagy:blockNethermind:0"=0
+    I:"Automagy:blockNethermind:1"=0
+    I:"Automagy:blockNethermind:10"=0
+    I:"Automagy:blockNethermind:11"=0
+    I:"Automagy:blockNethermind:12"=0
+    I:"Automagy:blockNethermind:13"=0
+    I:"Automagy:blockNethermind:14"=0
+    I:"Automagy:blockNethermind:15"=0
+    I:"Automagy:blockNethermind:2"=0
+    I:"Automagy:blockNethermind:3"=0
+    I:"Automagy:blockNethermind:4"=0
+    I:"Automagy:blockNethermind:5"=0
+    I:"Automagy:blockNethermind:6"=0
+    I:"Automagy:blockNethermind:7"=0
+    I:"Automagy:blockNethermind:8"=0
+    I:"Automagy:blockNethermind:9"=0
+    I:"Automagy:blockRedcrystalMerc:0"=0
+    I:"Automagy:blockRedcrystalMerc:1"=0
+    I:"Automagy:blockRedcrystalMerc:10"=0
+    I:"Automagy:blockRedcrystalMerc:11"=0
+    I:"Automagy:blockRedcrystalMerc:12"=0
+    I:"Automagy:blockRedcrystalMerc:13"=0
+    I:"Automagy:blockRedcrystalMerc:14"=0
+    I:"Automagy:blockRedcrystalMerc:15"=0
+    I:"Automagy:blockRedcrystalMerc:2"=0
+    I:"Automagy:blockRedcrystalMerc:3"=0
+    I:"Automagy:blockRedcrystalMerc:4"=0
+    I:"Automagy:blockRedcrystalMerc:5"=0
+    I:"Automagy:blockRedcrystalMerc:6"=0
+    I:"Automagy:blockRedcrystalMerc:7"=0
+    I:"Automagy:blockRedcrystalMerc:8"=0
+    I:"Automagy:blockRedcrystalMerc:9"=0
+    I:"Automagy:blockRemoteComparator:0"=0
+    I:"Automagy:blockRemoteComparator:1"=0
+    I:"Automagy:blockRemoteComparator:10"=0
+    I:"Automagy:blockRemoteComparator:11"=0
+    I:"Automagy:blockRemoteComparator:12"=0
+    I:"Automagy:blockRemoteComparator:13"=0
+    I:"Automagy:blockRemoteComparator:14"=0
+    I:"Automagy:blockRemoteComparator:15"=0
+    I:"Automagy:blockRemoteComparator:2"=0
+    I:"Automagy:blockRemoteComparator:3"=0
+    I:"Automagy:blockRemoteComparator:4"=0
+    I:"Automagy:blockRemoteComparator:5"=0
+    I:"Automagy:blockRemoteComparator:6"=0
+    I:"Automagy:blockRemoteComparator:7"=0
+    I:"Automagy:blockRemoteComparator:8"=0
+    I:"Automagy:blockRemoteComparator:9"=0
+    I:"Automagy:blockReqTome:0"=0
+    I:"Automagy:blockReqTome:1"=0
+    I:"Automagy:blockReqTome:10"=0
+    I:"Automagy:blockReqTome:11"=0
+    I:"Automagy:blockReqTome:12"=0
+    I:"Automagy:blockReqTome:13"=0
+    I:"Automagy:blockReqTome:14"=0
+    I:"Automagy:blockReqTome:15"=0
+    I:"Automagy:blockReqTome:2"=0
+    I:"Automagy:blockReqTome:3"=0
+    I:"Automagy:blockReqTome:4"=0
+    I:"Automagy:blockReqTome:5"=0
+    I:"Automagy:blockReqTome:6"=0
+    I:"Automagy:blockReqTome:7"=0
+    I:"Automagy:blockReqTome:8"=0
+    I:"Automagy:blockReqTome:9"=0
+    I:"Automagy:blockRunedObsidian:0"=0
+    I:"Automagy:blockRunedObsidian:1"=0
+    I:"Automagy:blockRunedObsidian:10"=0
+    I:"Automagy:blockRunedObsidian:11"=0
+    I:"Automagy:blockRunedObsidian:12"=0
+    I:"Automagy:blockRunedObsidian:13"=0
+    I:"Automagy:blockRunedObsidian:14"=0
+    I:"Automagy:blockRunedObsidian:15"=0
+    I:"Automagy:blockRunedObsidian:2"=0
+    I:"Automagy:blockRunedObsidian:3"=0
+    I:"Automagy:blockRunedObsidian:4"=0
+    I:"Automagy:blockRunedObsidian:5"=0
+    I:"Automagy:blockRunedObsidian:6"=0
+    I:"Automagy:blockRunedObsidian:7"=0
+    I:"Automagy:blockRunedObsidian:8"=0
+    I:"Automagy:blockRunedObsidian:9"=0
+    I:"Automagy:blockScribePointer:0"=0
+    I:"Automagy:blockScribePointer:1"=0
+    I:"Automagy:blockScribePointer:10"=0
+    I:"Automagy:blockScribePointer:11"=0
+    I:"Automagy:blockScribePointer:12"=0
+    I:"Automagy:blockScribePointer:13"=0
+    I:"Automagy:blockScribePointer:14"=0
+    I:"Automagy:blockScribePointer:15"=0
+    I:"Automagy:blockScribePointer:2"=0
+    I:"Automagy:blockScribePointer:3"=0
+    I:"Automagy:blockScribePointer:4"=0
+    I:"Automagy:blockScribePointer:5"=0
+    I:"Automagy:blockScribePointer:6"=0
+    I:"Automagy:blockScribePointer:7"=0
+    I:"Automagy:blockScribePointer:8"=0
+    I:"Automagy:blockScribePointer:9"=0
+    I:"Automagy:blockThirstyTank:0"=0
+    I:"Automagy:blockThirstyTank:1"=0
+    I:"Automagy:blockThirstyTank:10"=0
+    I:"Automagy:blockThirstyTank:11"=0
+    I:"Automagy:blockThirstyTank:12"=0
+    I:"Automagy:blockThirstyTank:13"=0
+    I:"Automagy:blockThirstyTank:14"=0
+    I:"Automagy:blockThirstyTank:15"=0
+    I:"Automagy:blockThirstyTank:2"=0
+    I:"Automagy:blockThirstyTank:3"=0
+    I:"Automagy:blockThirstyTank:4"=0
+    I:"Automagy:blockThirstyTank:5"=0
+    I:"Automagy:blockThirstyTank:6"=0
+    I:"Automagy:blockThirstyTank:7"=0
+    I:"Automagy:blockThirstyTank:8"=0
+    I:"Automagy:blockThirstyTank:9"=0
+    I:"Automagy:blockVisReader:0"=0
+    I:"Automagy:blockVisReader:1"=0
+    I:"Automagy:blockVisReader:10"=0
+    I:"Automagy:blockVisReader:11"=0
+    I:"Automagy:blockVisReader:12"=0
+    I:"Automagy:blockVisReader:13"=0
+    I:"Automagy:blockVisReader:14"=0
+    I:"Automagy:blockVisReader:15"=0
+    I:"Automagy:blockVisReader:2"=0
+    I:"Automagy:blockVisReader:3"=0
+    I:"Automagy:blockVisReader:4"=0
+    I:"Automagy:blockVisReader:5"=0
+    I:"Automagy:blockVisReader:6"=0
+    I:"Automagy:blockVisReader:7"=0
+    I:"Automagy:blockVisReader:8"=0
+    I:"Automagy:blockVisReader:9"=0
+    I:"Automagy:blockXPStone:0"=0
+    I:"Automagy:blockXPStone:1"=0
+    I:"Automagy:blockXPStone:10"=0
+    I:"Automagy:blockXPStone:11"=0
+    I:"Automagy:blockXPStone:12"=0
+    I:"Automagy:blockXPStone:13"=0
+    I:"Automagy:blockXPStone:14"=0
+    I:"Automagy:blockXPStone:15"=0
+    I:"Automagy:blockXPStone:2"=0
+    I:"Automagy:blockXPStone:3"=0
+    I:"Automagy:blockXPStone:4"=0
+    I:"Automagy:blockXPStone:5"=0
+    I:"Automagy:blockXPStone:6"=0
+    I:"Automagy:blockXPStone:7"=0
+    I:"Automagy:blockXPStone:8"=0
+    I:"Automagy:blockXPStone:9"=0
     I:"BiomesOPlenty:ashStone:7"=3
     I:"BiomesOPlenty:biomeBlock:7"=3
     I:"BiomesOPlenty:cragRock:7"=3
