--- a/config/atg/biome_modifiers.cfg
+++ b/config/atg/biome_modifiers.cfg
@@ -885,6 +885,23 @@ BiomesOPlenty {
 }
 
 
+"BuildCraft|Factory" {
+
+    "Desert Oil Field" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Ocean Oil Field" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+}
+
+
 "BuildCraft|Transport" {
 
     "Desert Oil Field" {
