--- a/config/bettersleeping.cfg
+++ b/config/bettersleeping.cfg
@@ -1,6 +1,12 @@
 # Configuration file
 
 config {
+    # chance to get bad morning debuffs [range: 0.0 ~ 1.0, default: 0.3]
+    S:chanceToGetBadNight=0.3
+
+    # chance to get good morning buffs [range: 0.0 ~ 1.0, default: 0.5]
+    S:chanceToGetGoodNight=0.5
+
     # what is the chance that it will stop raining
     D:chanceToStopRain=1.0
 
@@ -74,7 +80,7 @@ config {
         # At which level you get nausea from caffeine [range: 0 ~ 23999, default: 50]
         I:caffeineDebuffsAt=50
 
-        # OreDict entries to allow caffeine from [default: [foodCoffee], [foodTea], [foodCoffeeconleche], [foodTea], [foodRaspberryicedtea], [foodChaitea], [foodEspresso], [foodMochaicecream], [cropCoffee]]
+        # OreDict entries to allow caffeine from [default: [foodCoffee], [foodTea], [foodCoffeeconleche], [foodTea], [foodRaspberryicedtea], [foodChaitea], [foodEspresso], [foodMochaicecream], [cropCoffee], [pillCoffee]]
         S:caffeineOredicts <
             foodCoffee
             foodTea
@@ -228,6 +234,31 @@ gui {
 
     # Top offset of the sleepybar [range: 1 ~ 256, default: 8]
     I:guiOffsetTop=12
+}
+
+
+pill {
+    # how much tiredness is added per caffeine pill [range: 0 ~ 23999, default: 1000]
+    I:caffeinePillAmount=1000
+
+    # maximum 'pill' level in your blood [range: 0 ~ 23999, default: 30]
+    I:maximumPillLevel=30
+
+    # OreDict entries that are treated as pills [default: [pill]]
+    S:pillOredicts <
+        pill
+     >
+
+    # amount of 'pill' gained per munched pill [range: 0.0 ~ 23999.0, default: 10.0]
+    S:pillPerPill=10.0
+
+    # how much tiredness is removed per sleeping pill [range: 0 ~ 23999, default: 2000]
+    I:sleepingPillAmount=2000
+
+    # OreDict entries that are treated as sleeping pill [default: [pillSleeping]]
+    S:sleepingPillOredicts <
+        pillSleeping
+     >
 }
 
 
