--- a/config/Morpheus.cfg
+++ b/config/Morpheus.cfg
@@ -8,10 +8,10 @@ groundlevel {
 
 settings {
     B:AlertEnabled=true
-    B:IncludeMiners=false
-    S:OnMorningText=Wakey, wakey, rise and shine... Good Morning everyone!
-    S:OnSleepText=is now sleeping.
-    S:OnWakeText=has left their bed.
+    B:IncludeMiners=true
+    S:OnMorningText=Wakey, wakey, rise and shine... Good Morning everyone! Zombies want yer brains!
+    S:OnSleepText=is now sleeping...a perfect target!
+    S:OnWakeText=has left their bed, hunted by zombies!
     I:SleeperPerc=50
 }
 
