--- a/config/buildcraft/compat.cfg
+++ b/config/buildcraft/compat.cfg
@@ -15,6 +15,9 @@ modules {
     B:BinnieMods=true
 
     # null [default: true]
+    B:BundledRedstone=true
+
+    # null [default: true]
     B:CarpentersBlocks=true
 
     # null [default: true]
@@ -27,6 +30,9 @@ modules {
     B:ForgeMultipart=true
 
     # null [default: true]
+    B:ImmersiveEngineering=true
+
+    # null [default: true]
     B:IronChest=true
 
     # null [default: true]
@@ -37,6 +43,9 @@ modules {
 
     # null [default: true]
     B:Railcraft=true
+
+    # null [default: true]
+    B:RedLogic=true
 
     # null [default: true]
     B:Waila=true
